Reorganizing code, separating animation code from main code, separating robot code from main code. Adding files to html

--- a/trabalhos/tarefa_pratica_2/index.html
+++ b/trabalhos/tarefa_pratica_2/index.html
@@ -10,7 +10,11 @@
 	</head>
 	<body>
 		<script src="../../threeJs/three.js"></script>
-		<script src="./stats.min.js"></script>
+    <script src="./stats.min.js"></script>
+    <script src="./robot.js"></script>
+    <script src="./animations/wave.js">  </script>
+    <script src="./animations/jumpingJacks.js">  </script>
+    <script src="./animations/karateKick.js">  </script>
 		<script src="./main.js">  </script>
 	</body>
 </html>
