changing robot colors

--- a/trabalhos/tarefa_pratica_2/index.html
+++ b/trabalhos/tarefa_pratica_2/index.html
@@ -12,7 +12,7 @@
 		<script src="../../threeJs/three.js"></script>
     <script src="./stats.min.js"></script>
     <script src="./robot.js"></script>
-    <script src="./animations/wave.js">  </script>
+    <script src="./animations/handWave.js">  </script>
     <script src="./animations/jumpingJacks.js">  </script>
     <script src="./animations/karateKick.js">  </script>
 		<script src="./main.js">  </script>
